[package]
description = "devp2p and libp2p network backends merged together"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "ethcore-network-combined"
version = "1.11.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore-io = { path = "../io" }
ethcore-network = { path = "../network" }
ethcore-network-devp2p = { path = "../network-devp2p" }
ethcore-network-libp2p = { path = "../network-libp2p" }
ethkey = { path = "../../ethkey" }
