[package]
description = "libp2p implementation of the ethcore network library"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "ethcore-network-libp2p"
version = "1.11.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
fnv = "1.0"
futures = "0.1"
#multiaddr = "0.3"
multiaddr = { git = "https://github.com/multiformats/rust-multiaddr", rev = "cc39c90" }
multiplex = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-dns = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-identify = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-kad = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-peerstore = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
#libp2p-secio = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-swarm = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-tcp-transport = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
libp2p-websocket = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }
ethcore-network = { path = "../network" }
ethkey = { path = "../../ethkey" }
parking_lot = "0.5"
log = "0.3"
slab = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
varint = { git = "https://github.com/tomaka/libp2p-rs", branch = "zksummit" }

[dev-dependencies]
ethcore-bytes = { path = "../bytes" }
ethcore-io = { path = "../io" }
ethcore-logger = { path ="../../logger" }

[features]
default = []
